--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,16 @@
     display: none;
   }
 }
+
+#mobile-menu {
+  display: none;
+}
+
+@media only screen and (max-width: 460px) {
+  #mobile-menu {
+    display: block;
+  }
+  #desktop-menu {
+    display: none;
+  }
+}
